# monarch-phenologs

./: .dockerignore  .gitignore  Dockerfile  README.md  build_docker.sh  pyproject.toml
container/: build_container.sh  monarch-phenologs.def
nextflow/: main.nf  nextflow.config  upload.nf
nextflow/modules/: 01_get_data.nf  01_get_env.nf  02_compute_random_trials.nf  02_get_data.nf  03_compute_random_trials.nf  04_compute_phenologs.nf  05_compute_fdr.nf  05_compute_ortholog_rankings.nf  06_compute_ortholog_rankings.nf  disease_gene_candidate_ranking.nf  leave_one_out_calculations.nf  leave_one_out_rankings.nf  merge_outputs.nf  to_similarity_tables.nf  upload_results.nf
python/: 01_download_and_setup.py  02_kg_data_extraction.py  03_compute_phenologs_randomized_trials.py  04_compute_phenologs.py  05_compute_phenologs_fdr_data.py  06_phenologs_compute_ortholog_to_phenotype_rankings.py  phenologs_disease_gene_candidate_rankings.py  phenologs_leave_one_out_xvalidation.py  phenologs_to_oaksim.py  phenologs_utils.py  phenologs_xvalidation_ortholog_to_phenotype_ranking.py
transforms/: 01_data_acquisition  01_data_acquisition.py  02_data_extraction.py  03_generate_ortholog_phenotype_df_files.py  03_generate_ortholog_phenotype_pkl_files.py  03_generate_random_data.py  04_generate_random_data.py  04_generate_random_data_pathos.py  04b_multiprocess_generate_random_data.py  04c_multiprocess_generate_random_data.py  05_calculate_fdr.py  05_generate_fdr_phenolog_p_values.py  06_calculate_false_discovery_rate.py  07_generate_final_phenologs.py  xx_calculate_fdr.py
(+38 files in other folders)
