[tool.poetry]
name = "monarch-phenologs"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Aaron Odell <aaron@tislab.org>"]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^1.3.3"
numpy = "^1.21.2"
requests = "^2.26.0"
scipy = "^1.7.1"
networkx = "^2.6.3"
pronto = "^2.4.0"
IPython = "^8.29.0"
pydantic = ">=2.10"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"